# alastor

./: .env  .gitignore  Makefile  README.md  setup.cfg
alastor/: __init__.py  api.py  decorators.py  scripts.py
alastor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alastor/db/: 0.sql
alastor/geodata/: countries.json
alastor/static/css/: base.css
alastor/static/js/: login.js  profile.js
alastor/templates/: index.html  layout.html  organise.html  player.html  profile.html  ranking.html
