[metadata]
name = alastor
version = 0.0.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/alastor
description="Website for V:tES tournament organisation",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg tournament web prince inner circle
classifiers =
    Development Status :: 0 - Alpha
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Framework :: Flask
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    babel
    flask
    flask-babel
    pillow
    psycopg2
    requests
    setuptools

[options.extras_require]
dev =
    black
    flake8
    ipython
    pytest
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    run-alastor = alastor:main

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
